--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "4.13.3",
-    "multer": "1.1.0"
+    "multer": "1.1.0",
+    "cheerio": "0.20.0"
   },
   "devDependencies": {
     "should": "~7.1.0",
